@@ -1,3 +1,8 @@
+2012-06-04 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/ralloc2.cc:
+	  Disallow surviving hl in addition with extended stack operands.
+
 2012-06-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/mcs51/ralloc.c (packForPush),
